// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check config builder for [Function awaGetActionToken] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Awa/GetActionToken/456734563673/",
}
`;

exports[`check config builder for [Function awaInitializeRequest] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Awa/Initialize/",
}
`;

exports[`check config builder for [Function awaProvideAuthorizationResult] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Awa/AwaProvideAuthorizationResult/",
}
`;

exports[`check config builder for [Function equipItem] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/EquipItem/",
}
`;

exports[`check config builder for [Function equipItems] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/EquipItems/",
}
`;

exports[`check config builder for [Function getActivityHistory] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "count": 10,
    "mode": 5,
    "page": 2,
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Account/123456/Character/1234658790/Stats/Activities/",
}
`;

exports[`check config builder for [Function getCharacter] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/Character/1234658790/",
}
`;

exports[`check config builder for [Function getClanAggregateStats] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "modes": Array [
      5,
      7,
    ],
  },
  "url": "https://www.bungie.net/Platform/Destiny2/Stats/AggregateClanStats/78346592834756/",
}
`;

exports[`check config builder for [Function getClanLeaderboards] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "maxtop": 6,
    "modes": Array [
      5,
      7,
    ],
    "statid": "234624564",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/Stats/Leaderboards/Clans/78346592834756/",
}
`;

exports[`check config builder for [Function getClanWeeklyRewardState] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Clan/78346592834756/WeeklyRewardState/",
}
`;

exports[`check config builder for [Function getCollectibleNodeDetails] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/Character/1234658790/Collectibles/10293847/",
}
`;

exports[`check config builder for [Function getDestinyAggregateActivityStats] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/3/Account/123456/Character/1234658790/Stats/AggregateActivityStats/",
}
`;

exports[`check config builder for [Function getDestinyEntityDefinition] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Manifest/DestinyInventoryItemDefinition/23463456/",
}
`;

exports[`check config builder for [Function getDestinyManifest] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Manifest/",
}
`;

exports[`check config builder for [Function getHistoricalStats] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "dayend": "YYYY-MM-DD",
    "daystart": "YYYY-MM-DD",
    "groups": "General,Weapons",
    "modes": "5,7",
    "periodType": "AllTime",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Account/123456/Character/1234658790/Stats/",
}
`;

exports[`check config builder for [Function getHistoricalStatsDefinition] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Stats/Definition/",
}
`;

exports[`check config builder for [Function getHistoricalStatsForAccount] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "groups": "General,Weapons",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Account/123456/Stats/",
}
`;

exports[`check config builder for [Function getItem] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/Item/0987654321/",
}
`;

exports[`check config builder for [Function getLeaderboards] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "maxtop": 6,
    "modes": Array [
      5,
      7,
    ],
    "statid": "234624564",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Account/123456/Stats/Leaderboards/",
}
`;

exports[`check config builder for [Function getLeaderboardsForCharacter] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "maxtop": 6,
    "modes": Array [
      5,
      7,
    ],
    "statid": "234624564",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/Stats/Leaderboards/3/123456/1234658790/",
}
`;

exports[`check config builder for [Function getLinkedProfiles] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "getAllMemberships": true,
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/LinkedProfiles/",
}
`;

exports[`check config builder for [Function getPostGameCarnageReport] 1`] = `
Object {
  "method": "GET",
  "url": "https://stats.bungie.net/Platform/Destiny2/Stats/PostGameCarnageReport/456745673456/",
}
`;

exports[`check config builder for [Function getProfile] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/",
}
`;

exports[`check config builder for [Function getPublicMilestoneContent] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Milestones/23546789/Content/",
}
`;

exports[`check config builder for [Function getPublicMilestones] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/Milestones/",
}
`;

exports[`check config builder for [Function getPublicVendors] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/Vendors/",
}
`;

exports[`check config builder for [Function getUniqueWeaponHistory] 1`] = `
Object {
  "method": "GET",
  "url": "https://www.bungie.net/Platform/Destiny2/3/Account/123456/Character/1234658790/Stats/UniqueWeapons/",
}
`;

exports[`check config builder for [Function getVendor] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/Character/1234658790/Vendors/45674576/",
}
`;

exports[`check config builder for [Function getVendors] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "components": "400,402,300,301,304,305,306,307,600,308,310,309",
    "filter": 0,
  },
  "url": "https://www.bungie.net/Platform/Destiny2/3/Profile/123456/Character/1234658790/Vendors/",
}
`;

exports[`check config builder for [Function insertSocketPlug] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/InsertSocketPlug/",
}
`;

exports[`check config builder for [Function pullFromPostmaster] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/PullFromPostmaster/",
}
`;

exports[`check config builder for [Function reportOffensivePostGameCarnageReportPlayer] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://stats.bungie.net/Platform/Destiny2/Stats/PostGameCarnageReport/456745673456/Report/",
}
`;

exports[`check config builder for [Function searchDestinyEntities] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "page": 2,
  },
  "url": "https://www.bungie.net/Platform/Destiny2/Armory/Search/DestinyInventoryItemDefinition/something/",
}
`;

exports[`check config builder for [Function searchDestinyPlayer] 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "returnOriginalProfile": true,
  },
  "url": "https://www.bungie.net/Platform/Destiny2/SearchDestinyPlayer/3/asdf/",
}
`;

exports[`check config builder for [Function setItemLockState] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/SetLockState/",
}
`;

exports[`check config builder for [Function setQuestTrackedState] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/SetTrackedState/",
}
`;

exports[`check config builder for [Function transferItem] 1`] = `
Object {
  "body": Object {},
  "method": "POST",
  "url": "https://www.bungie.net/Platform/Destiny2/Actions/Items/TransferItem/",
}
`;
